added cursor pointer for list

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,6 +46,7 @@ button[disabled] {
   /* Element counter */
   li::before {
     content: counters(index, ".", decimal-leading-zero);
+    cursor: pointer;
     font-size: 1.5rem;
     text-align: right;
     font-weight: bold;
